# rust_puzzling

./: Cargo.toml
kattis/: different.rs  minspantree.rs  sretan.rs  wiseguy.rs
kickstart/round_2022_F/: fabrics.rs
kickstart/round_2022_G/: curling.rs  happy_subarrays.rs  walktober.rs
src/: bits.rs  fenwick.rs  inplace_radix.rs  io.rs  lib.rs  num.rs  primes.rs  segment.rs  union_find.rs
src/utils/: fenwick.rs  io.rs  mod.rs
