[package]
name = "rust_puzzling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kattis_sretan"
path = "kattis/sretan.rs"

[[bin]]
name = "kattis_different"
path = "kattis/different.rs"

[[bin]]
name = "kattis_minspantree"
path = "kattis/minspantree.rs"

[[bin]]
name = "kattis_wiseguy"
path = "kattis/wiseguy.rs"